src/app/movies/movies.component.css
.btn-success {
  padding:5px;
  padding-right : 20px;
  height : 50px;
  width : 150px;
  margin : 20px;
}
/* The Modal (background) */
.modal {
  display: block; /* Hidden by default */
  position: fixed; /* Stay in place */
  z-index: 1; /* Sit on top */
  left: 0;
  top: 0;
  width: 100%; /* Full width */
  height: 100%; /* Full height */
  overflow: auto; /* Enable scroll if needed */
  background-color: rgb(0,0,0); /* Fallback color */
  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
}
/* Modal Content/Box */
.modal-content {
  background-color: #fefefe;
  margin: 15% auto; /* 15% from the top and centered */
  padding: 20px;
  border: 1px solid #888;
  width: 50%;
  height : 50%;
  z-index:555;

}

/* The Close Button */
.close {
  color: #aaa;
  float: right;
  font-size: 28px;
  font-weight: bold;
  position: absolute;
  z-index: 50;
  border-radius:30%;
  top: 1px;
  left: 0px;
  border:2px solid red;
  color: red;
  opacity: 0.2;

}

.close:hover,
.close:focus {
  color: black;
  text-decoration: none;
  cursor: pointer;
  color: red;
  opacity:1;
  background: red;
  color: white;
}
.col-sm-6 .movieImage {
  margin:5%;
  width:80%;
  margin-top:1px;
  margin-bottom:1px;
}


[animate-on-change] {
  transition: all 1s;
  -webkit-transition: all 1s;
}
[animate-on-change].changed {
  background-color: red;
  transition: none;
  -webkit-transition: none;
}

.flip-container {
  -webkit-perspective: 800;
  perspective: 800;
  position: relative;

}
.flip-container .card.flipped {
  transform: rotatex(180deg);
  -ms-transform: rotatex(180deg);
  -webkit-transform: rotatex(180deg);
}

.flip-container .card {
  height: 100px;
  width: 100px;
  transform-style: preserve-3d;
  -ms-transform-style: preserve-3d;
  -webkit-transform-style: preserve-3d;
  transition: 0.3s;
  -webkit-transition: 0.3s;
}

.flip-container .card .face {
  backface-visibility: hidden;
  -webkit-backface-visibility: hidden;
  position: absolute;
  z-index: 2;
}

.flip-container .card .front {
  z-index: 1;
}

.flip-container .card .back {
  -webkit-transform: rotatex(-180deg);
}

.playButton {
  background: rgba(7, 20, 30, 0.7);
  /*background: red;*/
  height: 3em;
  position: absolute;
  left: 50%;
  top: 43%;
  width: 4em;
  margin: -25px 0 0 -25px;
  /*border: .2em solid #3b4249;*/
  /*border:.2em solid white;*/
  border-radius: .8em;
  cursor: pointer;
 /* z-index: 2;*/
  opacity: 1;
  box-shadow: 0 0 1em rgba(255, 255, 255, 0.25);
  transition: all .4s
}
.playButton:hover {
  cursor: pointer;
  /*background: rgba(7, 20, 30, 0.7);*/
  background: red;
  border: .2em solid white;
}
.insidePlayButton {
  position: relative;
  height: 100%;
}
.insidePlayButton:before {
  content: "";
  display: block;
  width: 0;
  height: 0;
  border-style: solid;
  border-width: 10px 0 10px 20px;
  border-color: transparent transparent transparent #ffffff;
  position: absolute;
  top: 50%;
  left: 50%;
  margin: -10px 0 0 -7px;
}

.row {
  margin-left:0px;
  margin-right: 0px;
}
.movieTitle {
  height: 50px;
  width: 80%;
  margin:5%;
}
.fa {
  font-size: 24px;
  /* left: -18px; */
  position: absolute;
  left: 83%;
  cursor: pointer;

}

@media only screen and (max-width: 900px) {
  .fa {
    left: 95%;
    cursor: none;
    display: none;
  }
}
.nameButton {
  visibility: hidden;
  position: absolute;
  z-index: 9999;
  top: -8%;
  width: 80%;
  font-size: 14px;
  background: black;
  color: white;
  margin: 4%;
}
.parentForTitle:hover  .nameButton {
  visibility: visible;
}

@media only screen and (max-width: 900px) {
  .nameButton {
    visibility: visible;
    position: relative;
    margin-left: 9%;
  }
  .playButton {
    top: 11%;
  }
}
@media only screen  and (max-width: 1023px){
  .playButton {
    top: 23%;
  }
}

